<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_province"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/province_hint"
        android:inputType="textPersonName"
        app:layout_constraintVertical_chainStyle="spread"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tv_province"
        android:layout_marginLeft="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/tv_province"
        android:layout_width="58dp"
        android:layout_height="41dp"
        android:text="Province"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/tv_city"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="City"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_province" />

    <EditText
        android:id="@+id/et_city"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/city_hint"
        android:inputType="textPersonName"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/et_province"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/et_province"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/et_province"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="32dp"
        android:text="submit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_city"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/ry_weather"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_submit"
        app:layout_constraintVertical_bias="0.0" />


</android.support.constraint.ConstraintLayout>